<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GE血压助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="measure">Measure</string>
    <string name="history_english">History</string>
    <string name="record">Record</string>
    <string name="clear">Clear</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="copyright">Copyright© Shaoxiang Su.All Rights Reserved</string>
    <string name="start_measure_chinese">开&#160;始&#160;测&#160;量</string>
    <string name="start_measure_english">Start Measurement</string>
    <string name="login_chinese">登&#160;录</string>
    <string name="login_english">Login</string>
    <string name="cloud_chinese">云管理</string>
    <string name="cloud_english">Cloud</string>
    <string name="record_chinese">测&#160;量&#160;记&#160;录</string>
    <string name="record_english">Measurement Record</string>
    <string name="start_chinese">开&#160;始</string>
    <string name="start_english">Start</string>
    <string name="take_chinese">记&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="take_english">Record</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_cloud_management">CloudManagementActivity</string>
    <string name="title_activity_repeat">RepeatActivity</string>
    <string name="longtime_measure_chinese">24 小 时 监 测</string>
    <string name="longtime_measure_english">24-Hour Measurement</string>
    <string name="next_measure_english">Next measurement scheduled at</string>
    <string name="start_repeat_english">Start 24 Hour Measurement</string>
    <string name="stop_repeat_english">Stop 24 Hour Measurement</string>
    <string name="time_undefined">--------</string>

</resources>
