<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/LinearLayout1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="168dp"
			android:layout_height="match_parent"
			android:layout_weight="0.34"
			android:orientation="vertical" >

			<RelativeLayout
				android:id="@+id/measureLayout"
				android:layout_width="188dp"
				android:layout_height="0dp"
				android:layout_weight="3.01"
				android:background="#B9D3EE" >

				<ImageView
					android:id="@+id/imageView1"
					android:layout_width="100dp"
					android:layout_height="100dp"
					android:layout_alignLeft="@+id/textView2"
					android:layout_alignParentTop="true"
					android:layout_marginTop="15dp"
					android:src="@drawable/main_search" />

				<TextView
					android:id="@+id/textView1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBottom="@+id/imageView1"
					android:layout_centerHorizontal="true"
					android:layout_marginBottom="32dp"
					android:text="@string/start_measure_chinese"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textSize="30sp" />

				<TextView
					android:id="@+id/textView2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBottom="@+id/imageView1"
					android:layout_centerHorizontal="true"
					android:text="@string/start_measure_english"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textSize="20sp" />

			</RelativeLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:background="#000000" />

			<RelativeLayout
				android:id="@+id/repeatLayout"
				android:layout_width="188dp"
				android:layout_height="0dp"
				android:layout_weight="3.01"
				android:background="#E6AAFD" >

				<TextView
					android:id="@+id/TextView01"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="31dp"
					android:text="@string/longtime_measure_chinese"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textSize="30sp" />

				<TextView
					android:id="@+id/TextView02"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true"
					android:layout_alignParentLeft="true"
					android:layout_marginBottom="26dp"
					android:gravity="center"
					android:text="@string/longtime_measure_english"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textSize="20sp" />

			</RelativeLayout>


		</LinearLayout>

		<View
			android:layout_width="5dp"
			android:layout_height="match_parent"
			android:background="#000000" />

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:orientation="vertical">

			<RelativeLayout
				android:id="@+id/loginLayout"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1.00"
				android:background="#98FB98" >

				<ImageView
					android:id="@+id/imageView2"
					android:layout_width="80dp"
					android:layout_height="80dp"
					android:layout_alignParentBottom="true"
					android:layout_alignParentRight="true"
					android:layout_marginBottom="40dp"
					android:layout_marginRight="10dp"
					android:src="@drawable/main_user" />


				<TextView
					android:id="@+id/textView3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					android:layout_marginTop="50dp"
					android:layout_marginLeft="40dp"
					android:text="@string/login_chinese"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textSize="30sp" />

				<TextView
					android:id="@+id/textView4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="45dp"
					android:layout_below="@id/textView3"
					android:text="@string/login_english"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textSize="20sp" />
			</RelativeLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:background="#000000"/>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:background="#FFEC8B"
				android:id="@+id/cloudLayout">

				<ImageView
					android:id="@+id/imageView3"
					android:layout_width="80dp"
					android:layout_height="80dp"
					android:layout_alignParentBottom="true"
					android:layout_alignParentRight="true"
					android:layout_marginBottom="40dp"
					android:layout_marginRight="10dp"
					android:src="@drawable/main_cloud" />

				<TextView
					android:id="@+id/textView5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					android:layout_marginTop="50dp"
					android:layout_marginLeft="20dp"
					android:text="@string/cloud_chinese"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textSize="30sp" />

				<TextView
					android:id="@+id/textView6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="40dp"
					android:layout_below="@id/textView5"
					android:text="@string/cloud_english"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textSize="20sp" />



			</RelativeLayout>

		</LinearLayout>

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="5dp"
		android:background="#000000"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:background="#FFC1C1"
		android:id="@+id/recordLayout">

		<ImageView
			android:id="@+id/imageView4"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="20dp"
			android:src="@drawable/main_record" />

		<TextView
			android:id="@+id/textView7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_marginLeft="60dp"
			android:layout_marginTop="50dp"
			android:text="@string/record_chinese"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="30sp" />

		<TextView
			android:id="@+id/textView8"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="40dp"
			android:layout_below="@id/textView7"
			android:text="@string/record_english"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="20sp" />
	</RelativeLayout>
</LinearLayout>
